compiler/tests-spec/testData/codegen/box/notLinked/objects/inheritance/neg/19.kt
/*
 * KOTLIN CODEGEN BOX NOT LINKED SPEC TEST (NEGATIVE)
 *
 * SECTIONS: objects, inheritance
 * NUMBER: 19
 * DESCRIPTION: Access to class members in the super constructor call of an object.
 * UNEXPECTED BEHAVIOUR
 * ISSUES: KT-25289
 * EXCEPTION: runtime
 */

open class Foo(val prop: Int) {
    object MyObject : Foo(MyObject.prop)
}

fun box(): String? {
    if (Foo.MyObject == null) return null

    return "OK"
}
